# TQC-Brain

./: CMakeLists.txt  Dockerfile.txt  README.md  _.gitignore.txt  alpha_engine.cpp  alpha_engine.hpp  bar_store.hpp  config.cpp  config.hpp  feature_engine.cpp  feature_engine.hpp  http_server.cpp  http_server.hpp  main.cpp  object_pool.hpp  regime_engine.cpp  regime_engine.hpp  ring_buffer.hpp  risk_engine.cpp  risk_engine.hpp  settings.json.example.txt  signal_engine.cpp  signal_engine.hpp  simd_math.cpp  simd_math.hpp  tracking.cpp  tracking.hpp  types.hpp
